--- a/sampleapp/templates/static_pages/home.html
+++ b/sampleapp/templates/static_pages/home.html
@@ -1,4 +1,5 @@
-{% extends "layouts/application.html" %}
+{% extends 'layouts/application.html' %}
+{% set title = "Home" %}
 {% block content %}
 <h1>Sample App</h1>
 <p>
