--- a/sampleapp/templates/static_pages/about.html
+++ b/sampleapp/templates/static_pages/about.html
@@ -1,4 +1,5 @@
-{% extends "layouts/application.html" %}
+{% extends 'layouts/application.html' %}
+{% set title = "About" %}
 {% block content %}
 <h1>About</h1>
 <p>
