--- a/sampleapp/templates/layouts/application.html
+++ b/sampleapp/templates/layouts/application.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>{{ title }} | Ruby on Rails Tutorial Sample App</title>
+    <title>{{ full_title(title) }}</title>
   </head>
   <body>
     <div id="content">{% block content %}{% endblock %}</div>
