--- a/sampleapp/templates/static_pages/home.html
+++ b/sampleapp/templates/static_pages/home.html
@@ -1,9 +1,16 @@
 {% extends 'layouts/application.html' %}
 {% block content %}
-<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+<div class="center jumbotron">
+  <h1>Welcome to the Sample App</h1>
+
+  <h2>
+    This is the home page for the
+    <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
+
+  <a href="#" class="btn btn-lg btn-primary">Sign up now!</a>
+</div>
+
+<a href="https://rubyonrails.org/"><img alt="Rails logo" width="200px" src="{{ url_for('static', filename='rails.svg') }}" /></a>
 {% endblock %}
