--- a/sampleapp/templates/layouts/application.html
+++ b/sampleapp/templates/layouts/application.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
+  <!-- bootstrup -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+	<!-- custom css -->
+	<link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}?=ver1.0">
+
+	{% include 'layouts/shim.html' %}
+
     <title>{{ full_title(title) }}</title>
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
-      </script>
-    <![endif]-->
   </head>
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-		<a href="#" id="logo">sample app</a>
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
-			<li><a href="#">Home</a>
-			<li><a href="#">Help</a>
-			<li><a href="#">Log in</a>
-          </ul>
-        </nav>
-      </div>
-    </header>
+	{% include 'layouts/header.html' %}
     <div class="container">
       <div id="content">{% block content %}{% endblock %}</div>
+	  {% include 'layouts/footer.html' %}
     </div>
   </body>
+  <!-- for bootstrup -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 </html>
