--- a/sampleapp/templates/layouts/footer.html
+++ b/sampleapp/templates/layouts/footer.html
@@ -5,8 +5,8 @@
   </small>
   <nav>
     <ul>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="{{ url_for('static_pages.about') }}">About</a></li>
+      <li><a href="{{ url_for('static_pages.contact') }}">Contact</a></li>
       <li><a href="https://news.railstutorial.org/">News</a></li>
     </ul>
   </nav>
