--- a/sampleapp/templates/layouts/header.html
+++ b/sampleapp/templates/layouts/header.html
@@ -1,10 +1,10 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-	<a href="#" id="logo">sample app</a>
+	<a href="{{ url_for('static_pages.home') }}" id="logo">sample app</a>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-		<li><a href="#">Home</a></li>
-		<li><a href="#">Help</a></li>
+		<li><a href="{{ url_for('static_pages.home') }}">Home</a></li>
+		<li><a href="{{ url_for('static_pages.help') }}">Help</a></li>
 		<li><a href="#">Log in</a></li>
       </ul>
     </nav>
