/signupページの雛形を作成。

--- a/sampleapp/templates/static_pages/home.html
+++ b/sampleapp/templates/static_pages/home.html
@@ -9,7 +9,7 @@
     sample application.
   </h2>
 
-  <a href="#" class="btn btn-lg btn-primary">Sign up now!</a>
+  <a href="{{ url_for('users.new') }}" class="btn btn-lg btn-primary">Sign up now!</a>
 </div>
 
 <a href="https://rubyonrails.org/"><img alt="Rails logo" width="200px" src="{{ url_for('static', filename='rails.svg') }}" /></a>
