--- a/sampleapp/templates/layouts/footer.html
+++ b/sampleapp/templates/layouts/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
-    The <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-    by <a href="https://www.michaelhartl.com/">Michael Hartl</a>
+    Implement the <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
+    using Python, Flask, Google App Engine and Cloud Datastore
   </small>
   <nav>
     <ul>
