--- a/sampleapp/templates/layouts/application.html
+++ b/sampleapp/templates/layouts/application.html
@@ -13,6 +13,9 @@
 	{% include 'layouts/shim.html' %}
 
     <title>{{ full_title(title) }}</title>
+	<meta name="csrf-param" content="authenticity_token" />
+	<meta name="csrf-token" content="{{ csrf_token_meta_tag() }}" />
+
   </head>
   <body>
 	{% include 'layouts/header.html' %}
@@ -26,10 +29,12 @@
 	  {% block content %}{% endblock %}
 	  {% include 'layouts/footer.html' %}
     </div>
-  </body>
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
-  <!-- for bootstrup -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
+	<!-- for bootstrup -->
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+	<!-- custom scripts -->
+	<script src="{{ url_for('static', filename='custom.js') }}"></script>
+</body>
 </html>
