--- a/sampleapp/templates/layouts/header.html
+++ b/sampleapp/templates/layouts/header.html
@@ -15,7 +15,9 @@
             <li><a href="{{ url_for('users.show', id=current_user().id) }}">
 				Profile
 			</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a href="{{ url_for('users.edit', id=current_user().id) }}">
+				Settings
+			</a></li>
             <li class="divider"></li>
             <li>
               <a rel="nofollow" data-method="delete" href="{{ url_for('sessions.destroy') }}">Log out</a>
