--- a/sampleapp/templates/users/edit.html
+++ b/sampleapp/templates/users/edit.html
@@ -1,13 +1,14 @@
 {% extends 'layouts/application.html' %}
-{% set title = 'Sign up' %}
+{% set title = 'Edit user' %}
 {% block content %}
-<h1>Sign up</h1>
+<h1>Update your profile</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-	<form action="{{ url_for('users.create') }}" accept-charset="UTF-8" method="post">
+	<form action="{{ url_for('users.handle_method', id=user.id) }}" accept-charset="UTF-8" method="post">
 	  {% include 'shared/error_messages.html' %}
 
+	  <input type="hidden" name="_method" value="patch" />
 	  <input type="hidden" name="authenticity_token" value="{{ csrf_token }}" />
 
 	  {{ make_form_label(user, 'name', 'Name')|safe }}
@@ -22,8 +23,13 @@
 	  {{ make_form_label(user, 'password_confirmation', 'Confirmation')|safe }}
 	  {{ make_form_input(user, 'password', 'password_confirmation', 'user_password_confirmation')|safe }}
 
-	  <input type="submit" name="commit" value="Create my account" class="btn btn-primary" />
+	  <input type="submit" name="commit" value="Save changes" class="btn btn-primary" />
 	</form>
+
+	<div class="gravatar_edit">
+      {{ gravatar_for(user)|safe }}
+      <a href="https://gravatar.com/emails" target="_blank" rel="noopener">change</a>
+    </div>
   </div>
 </div>
 {% endblock %}
