すべてのユーザーを表示する機能を追加。

--- a/sampleapp/templates/layouts/application.html
+++ b/sampleapp/templates/layouts/application.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
 	<!-- custom css -->
-	<link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}?=ver1.6">
+	<link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}?ver=0.0">
 
 	{% include 'layouts/shim.html' %}
 
