--- a/sampleapp/templates/layouts/header.html
+++ b/sampleapp/templates/layouts/header.html
@@ -6,7 +6,7 @@
 		<li><a href="{{ url_for('static_pages.home') }}">Home</a></li>
 		<li><a href="{{ url_for('static_pages.help') }}">Help</a></li>
 		{% if logged_in() %}
-		<li><a href="#">Users</a></li>
+		<li><a href="{{ url_for('users.index') }}">Users</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             Account <b class="caret"></b>
