ユーザーを削除する機能を追加。

--- a/sampleapp/templates/layouts/application.html
+++ b/sampleapp/templates/layouts/application.html
@@ -35,6 +35,6 @@
 	<!-- for bootstrup -->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 	<!-- custom scripts -->
-	<script src="{{ url_for('static', filename='custom.js') }}"></script>
+	<script src="{{ url_for('static', filename='custom.js') }}?ver=0.8"></script>
 </body>
 </html>
