--- a/sampleapp/templates/password_resets/edit.html
+++ b/sampleapp/templates/password_resets/edit.html
@@ -6,6 +6,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
 	<form action="{{ url_for('password_resets.update', id=reset_token) }}" accept-charset="UTF-8" method="post">
+	  {% set object = user %}
 	  {% include 'shared/error_messages.html' %}
 
 	  <input type="hidden" name="email" value="{{ user.email }}" />
