--- a/sampleapp/templates/static_pages/home.html
+++ b/sampleapp/templates/static_pages/home.html
@@ -1,5 +1,21 @@
 {% extends 'layouts/application.html' %}
 {% block content %}
+{% if logged_in() %}
+<div class="row">
+  <aside class="col-md-4">
+    <section class="user_info">
+      {% include 'shared/user_info.html' %}
+    </section>
+    <section class="micropost_form">
+      {% include 'shared/micropost_form.html' %}
+    </section>
+  </aside>
+  <div class="col-md-8">
+    <h3>Micropost Feed</h3>
+    {% include 'shared/feed.html' %}
+  </div>
+</div>
+{% else %}
 <div class="center jumbotron">
   <h1>Welcome to the Sample App</h1>
 
@@ -13,4 +29,5 @@
 </div>
 
 <a href="https://rubyonrails.org/"><img alt="Rails logo" width="200px" src="{{ url_for('static', filename='rails.svg') }}" /></a>
+{% endif %}
 {% endblock %}
