--- a/sampleapp/templates/users/edit.html
+++ b/sampleapp/templates/users/edit.html
@@ -6,6 +6,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
 	<form action="{{ url_for('users.handle_method', id=user.id) }}" accept-charset="UTF-8" method="post">
+	  {% set object = user %}
 	  {% include 'shared/error_messages.html' %}
 
 	  <input type="hidden" name="_method" value="patch" />
