--- a/sampleapp/templates/users/new.html
+++ b/sampleapp/templates/users/new.html
@@ -6,6 +6,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
 	<form action="{{ url_for('users.create') }}" accept-charset="UTF-8" method="post">
+	  {% set object = user %}
 	  {% include 'shared/error_messages.html' %}
 
 	  <input type="hidden" name="authenticity_token" value="{{ csrf_token }}" />
